[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/ui/Noto_Sans_Mono/NotoSansMono-VariableFont_wdth,wght.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/ui/UI.gd" type="Script" id=2]
[ext_resource path="res://scenes/music/Music.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 18
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 14
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 13
font_data = ExtResource( 1 )

[node name="UI" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions" type="Label" parent="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 168.0
margin_top = -120.0
margin_right = -168.0
rect_pivot_offset = Vector2( 398, 53.108 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "
[ WASD ] or [ Arrow keys ] - move"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions2" type="Label" parent="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 168.0
margin_top = -120.0
margin_right = -168.0
rect_pivot_offset = Vector2( 398, 53.108 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "
Blinking apples - 2x Points"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="Control"]
anchor_right = 1.0
margin_bottom = 96.0
rect_pivot_offset = Vector2( 398, 53.108 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.952941, 0.4, 1, 1 )
text = "Score: 1000"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lose" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Lose"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game Over" type="Label" parent="Lose"]
anchor_right = 1.0
margin_bottom = 277.0
rect_pivot_offset = Vector2( 398, 53.108 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.6, 0.4, 1 )
text = "  ______                                            ______                                 
 /      \\                                          /      \\                                
|  $$$$$$\\  ______   ______ ____    ______        |  $$$$$$\\ __     __   ______    ______  
| $$ __\\$$ |      \\ |      \\    \\  /      \\       | $$  | $$|  \\   /  \\ /      \\  /      \\ 
| $$|    \\  \\$$$$$$\\| $$$$$$\\$$$$\\|  $$$$$$\\      | $$  | $$ \\$$\\ /  $$|  $$$$$$\\|  $$$$$$\\
| $$ \\$$$$ /      $$| $$ | $$ | $$| $$    $$      | $$  | $$  \\$$\\  $$ | $$    $$| $$   \\$$
| $$__| $$|  $$$$$$$| $$ | $$ | $$| $$$$$$$$      | $$__/ $$   \\$$ $$  | $$$$$$$$| $$      
 \\$$    $$ \\$$    $$| $$ | $$ | $$ \\$$     \\       \\$$    $$    \\$$$    \\$$     \\| $$      
  \\$$$$$$   \\$$$$$$$ \\$$  \\$$  \\$$  \\$$$$$$$        \\$$$$$$      \\$      \\$$$$$$$ \\$$      
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Leaderboard" type="Control" parent="Lose"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -371.0
margin_top = -74.0
margin_right = 371.0
margin_bottom = 275.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Leaderboard" type="Label" parent="Lose/Leaderboard"]
anchor_bottom = 1.0
margin_right = 371.0
rect_pivot_offset = Vector2( 286, 129.794 )
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Leaderboard2" type="Label" parent="Lose/Leaderboard"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -371.0
margin_top = -174.5
margin_bottom = 174.5
rect_pivot_offset = Vector2( 286, 129.794 )
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions" type="Label" parent="Lose"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -72.0
rect_pivot_offset = Vector2( 398, 53.108 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Press [ Enter ] to replay or [ C ] for Credits "
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChooseName" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="ChooseName"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game Over" type="Label" parent="ChooseName"]
anchor_right = 1.0
margin_bottom = 277.0
rect_pivot_offset = Vector2( 398, 53.108 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.4, 1, 0.4, 1 )
text = "  ______                       __                 
 /      \\                     |  \\                
|  $$$$$$\\ _______    ______  | $$   __   ______  
| $$___\\$$|       \\  |      \\ | $$  /  \\ /      \\ 
 \\$$    \\ | $$$$$$$\\  \\$$$$$$\\| $$_/  $$|  $$$$$$\\
 _\\$$$$$$\\| $$  | $$ /      $$| $$   $$ | $$    $$
|  \\__| $$| $$  | $$|  $$$$$$$| $$$$$$\\ | $$$$$$$$
 \\$$    $$| $$  | $$ \\$$    $$| $$  \\$$\\ \\$$     \\
  \\$$$$$$  \\$$   \\$$  \\$$$$$$$ \\$$   \\$$  \\$$$$$$$"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="ChooseName"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -11.0
margin_bottom = 26.0
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.952941, 0.4, 1, 1 )
text = "Anonymous User"
align = 1
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Please choose a name" type="Label" parent="ChooseName"]
anchor_right = 1.0
margin_bottom = 624.0
rect_pivot_offset = Vector2( 398, 53.108 )
custom_fonts/font = SubResource( 1 )
text = "Please choose a
*super cool* user name:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Constraints" type="Label" parent="ChooseName"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -149.0
margin_top = -295.0
margin_right = 149.0
rect_pivot_offset = Vector2( 149, 140.5 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 0.643137 )
text = "* To be counted in the leaderboard the name must consist only of ASCII characters and
* must not contain any special characters (eg. spaces, asctrices, etc.) "
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions" type="Label" parent="ChooseName"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -72.0
rect_pivot_offset = Vector2( 398, 53.108 )
custom_fonts/font = SubResource( 1 )
text = "Press [ Enter ] to play"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Credits"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Label" parent="Credits"]
anchor_right = 1.0
margin_bottom = 277.0
rect_pivot_offset = Vector2( 398, 53.108 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.952941, 0.4, 1, 1 )
text = "
  ______                             __  __    __               
 /      \\                           |  \\|  \\  |  \\              
|  $$$$$$\\  ______    ______    ____| $$ \\$$ _| $$_     _______ 
| $$   \\$$ /      \\  /      \\  /      $$|  \\|   $$ \\   /       \\
| $$      |  $$$$$$\\|  $$$$$$\\|  $$$$$$$| $$ \\$$$$$$  |  $$$$$$$
| $$   __ | $$   \\$$| $$    $$| $$  | $$| $$  | $$ __  \\$$    \\ 
| $$__/  \\| $$      | $$$$$$$$| $$__| $$| $$  | $$|  \\ _\\$$$$$$\\
 \\$$    $$| $$       \\$$     \\ \\$$    $$| $$   \\$$  $$|       $$
  \\$$$$$$  \\$$        \\$$$$$$$  \\$$$$$$$ \\$$    \\$$$$  \\$$$$$$$ "
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions" type="Label" parent="Credits"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -72.0
rect_pivot_offset = Vector2( 398, 53.108 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Press [ Escape ] to return"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits2" type="Control" parent="Credits"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -371.0
margin_top = -74.0
margin_right = 371.0
margin_bottom = 275.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Label" parent="Credits/Credits2"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 286, 129.794 )
custom_fonts/font = SubResource( 3 )
text = "Game design, UI, art, and code by
Paul Maier

Basic game from
https://gitlab.com/gamedev-with-fabs/godot-snake

Music from OpenGameArt.org by
nene, Quitschie, Jensan, Wolfgang and Joth

Ascii art made with
Ascii art generator (https://patorjk.com/software/taag)

MADE WITH THE GODOT GAME ENGINE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Music" parent="." instance=ExtResource( 5 )]

[connection signal="text_entered" from="ChooseName/LineEdit" to="." method="_on_LineEdit_text_entered"]
